--- a/Episode-04/Coding/index.css
+++ b/Episode-04/Coding/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -7,23 +8,72 @@ html,
 body {
   width: 100%;
   height: 100%;
+  font-family: "Ubuntu", sans-serif;
 }
+/* ! Header Css Start From Here  */
+
 .Header {
   display: flex;
+  padding: 0 4rem;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid rgb(0, 0, 0);
+  box-shadow: 0px 10px 10px -10px rgba(11, 11, 11, 0.197);
+}
+.logoContainer {
+  border-radius: 50%;
+  overflow: hidden;
 }
 .main_Logo {
-  width: 120px;
-}
-.navContainer {
-  padding-right: 2rem;
+  width: 105px;
 }
 
 .navContainerUL {
+  padding-right: 2rem;
   display: flex;
   list-style: none;
-  gap: 1.5rem;
-  font-size: 18px;
+  gap: 2.2rem;
+  font-size: 1.1rem;
+  text-transform: capitalize;
+  font-family: inherit;
+  font-optical-sizing: auto;
+  font-weight: 500;
+}
+.navContainerUL li {
+  cursor: pointer;
+}
+
+/* ! Main Css Start From Here  */
+.mainContainer {
+  padding: 3rem 5rem;
+}
+.restaurantContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.restaurantCardContainer {
+  width: 15rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px,
+    rgba(17, 17, 26, 0.05) 0px 8px 32px;
+  cursor: pointer;
+  transition: box-shadow 0.4s;
+}
+.restaurantCardContainer:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+.restaurantCardIMG {
+  width: 100%;
+}
+.restaurantCardINFOContainer {
+  display: grid;
+  gap: 0.5rem;
+  font-family: inherit;
+  padding: 0.5rem;
+}
+.ratingAndDeliveryTimeContainer {
+  display: flex;
+  gap: 1rem;
 }
