--- a/Episode-05/Coding/index.css
+++ b/Episode-05/Coding/index.css
@@ -77,3 +77,48 @@ body {
   display: flex;
   gap: 1rem;
 }
+
+/* ! Search Container Css */
+.searchContainer,
+.filterContainer {
+  padding: 1rem 0;
+}
+.searchContainer {
+  display: flex;
+  gap: 1rem;
+}
+.searchContainer input {
+  padding: 0.6rem 3rem;
+  border: none;
+  background-color: rgba(227, 225, 225, 0.867);
+  border-radius: 0.3rem;
+  font-family: inherit;
+  text-transform: capitalize;
+  font-weight: 500;
+  font-size: 0.9rem;
+  color: inherit;
+}
+.topRatedBTN,
+.searchBTN {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  padding: 0.5rem 2rem;
+  border: none;
+  border-radius: 0.3rem;
+  font-family: inherit;
+  text-transform: capitalize;
+  font-weight: 500;
+  font-size: 0.9rem;
+  cursor: pointer;
+  transition: box-shadow 0.3s;
+  color: gray;
+}
+
+.topRatedBTN:hover {
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  color: black;
+}
+.searchBTN:hover {
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  color: black;
+}
